--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-/*Обнуление __от фриланс по жизни__*/
+/*Обнуление */
 
 * {
     padding: 0;
@@ -76,20 +76,21 @@ h1, h2, h3, h4, h5, h6 {
 /*-------------------------------*/
 
 .wrapper {
-    max-width: 1440px;
     margin: 0 auto;
     position: relative;
+    max-width: 1440px;
 }
 
 .content {
-    max-width: 1200px;
     margin: 0 auto;
+    max-width: 1200px;
 }
 
 /* header */
 
 .header {
     color: #F7F7F7;
+    letter-spacing: 0.02em;
 }
 
 .header-content {
@@ -98,10 +99,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .first-line {
     position: absolute;
+    padding: 20px 0;
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 20px 0;
     justify-content: space-between;
 }
 
@@ -113,17 +114,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .logo-block img {
-    width: 68px;
-    height: 58px;
-    margin-right: 15px;
+    padding-left: 3px;
+    margin-right: 15.73px;
+    width: 68.2px;
+    height: 58.43px;
 }
 
 .logo-block h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 32px;
-    font-weight: 400;
+    font-weight: 500;
     text-transform: uppercase;
     color: #F7F7F7;
+    letter-spacing: .0em;
 }
 
 /* nav  */
@@ -143,7 +146,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navigation-list li {
-    padding-left: 70px;
+    padding-left: 63px;
+    letter-spacing: 0.1px
+}
+
+.navigation-list li:nth-child(3) {
+    padding-left: 67px;
 }
 
 .navigation-list li a {
@@ -157,127 +165,166 @@ h1, h2, h3, h4, h5, h6 {
     background-color: transparent;
     border: 2px solid #CD6326;
     border-radius: 5px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #F7F7F7;
     font-size: 23px;
     font-weight: 400;
-    text-transform: capitalize;
+    transition: .3s;
+}
+
+.sign-in-button:hover {
+    background-color: #D06227;
+    border: 2px solid #D06227;
+    transition: .3s;
+}
+
+.sign-in-button:active {
+    background-color: #8E5613;
+    border: 2px solid #8E5613;
 }
 
 /* main-greeting */
 
 .info-section {
-    padding-top: 210px;
+    padding-top: 213px;
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
     color: #F7F7F7;
 }
 
 .info-section h1 {
+    margin-bottom: 62px;
     font-size: 48px;
     text-transform: capitalize;
     letter-spacing: 2px;
     color: #CD6326;
-    margin-bottom: 50px;
 }
 
 .info-section p {
+    margin-bottom: 49px;
     font-size: 18px;
-    max-width: 320px;
+    max-width: 274px;
     line-height: 27px;
-    margin-bottom: 50px;
-    letter-spacing: .1em;
+    letter-spacing: .002em;
 }
 
 .info-section button {
+    padding-bottom: 4px;
     width: 160px;
     height: 60px;
-    background-color: #CD6326;
-    border-radius: 5px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #F7F7F7;
-    font-size: 23px;
+    font-size: 22px;
     text-transform: capitalize;
+    border-radius: 5px;
+    background-color: #CD6326;
+    transition: .3s;
+}
+
+.info-section button:hover {
+    background-color: #E7902A;
+    transition: .3s;
+}
+
+.info-section button:active {
+    background-color: #8F5613;
+}
+
+.main-greeting {
+    min-height: 780px;
+    min-width: 1440px;
+    background-image: url("/images/Rectangle.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 /* main  */
 
 .latest-article {
     width: 100%;
+    min-width: 1440px;
     background-color: #CCCCCC;
-    min-width: 1440px;
-}
-
-.main-greeting {
-    background-image: url("/images/Rectangle.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    min-height: 780px;
-    min-width: 1440px;
 }
 
 .main-info {
-    padding-top: 120px;
+    padding-top: 133px;
     margin: 0 auto;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
+    letter-spacing: .05em;
 }
 
 .main-info h2 {
-    color: #333333;
+    margin-bottom: 37px;
     font-size: 48px;
-    margin-bottom: 20px;
+    letter-spacing: .002em;
+    color: #333333;
 }
 
 .main-info p {
-    color: #666666;
+    padding-bottom: 126px;
     font-size: 24px;
-    padding-bottom: 120px;
+    letter-spacing: .00em;
+    color: #666666;
 }
 
 /* text-form */
 
 .text-form-block {
-    padding-top: 240px;
+    padding-top: 245px;
     padding-bottom: 240px;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
     font-size: 27px;
+    letter-spacing: .02em;
 }
 
 .text-form-block p {
-    padding-bottom: 60px;
+    padding-bottom: 68px;
+    letter-spacing: .002em;
 }
 
 /* form block */
 
 .form-block {
+    height: 60px;
     display: flex;
     justify-content: center;
-    height: 60px;
 }
 
 .email {
+    padding-top: 1px;
+    padding-left: 15px;
     width: 540px;
+    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+    color: #666666;
     background-color: transparent;
     border: 1px solid #666666;
     border-right: none;
-    padding-left: 15px;
-    font-size: 23px;
-    font-family: 'Roboto', sans-serif;
-    color: #666666;
 }
 
 .submit-button {
     width: 120px;
-    background-color: #CD6326;
-    border-radius: 0px 5px 5px 0px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #F7F7F7;
     font-size: 23px;
     text-transform: capitalize;
+    background-color: #CD6326;
+    border-radius: 0px 5px 5px 0px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.submit-button:hover {
+    background-color: #E6921F;
+    transition: .3s;
+}
+
+.submit-button:active {
+    background-color: #8F5613;
 }
 
 /* footer */
@@ -291,25 +338,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer-inner {
-    min-height: 359px;
+    min-height: 360px;
     display: flex;
     align-items: center;
+    letter-spacing: 0.05em;
 }
 
 /* footer nav  */
 
 .footer-nav {
-    margin-left: 120px;
+    margin-left: 123px;
     flex-direction: row;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     font-size: 23px;
     color: #F7F7F7;
-    text-transform: capitalize;
+    letter-spacing: .00em;
 }
 
 .footer-nav ul {
     display: flex;
+    margin-left: 15px;
 }
 
 .footer-nav a {
@@ -317,7 +366,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer-nav li {
-    padding-right: 85px;
+    padding-right: 88px;
 }
 
 .footer-nav ul li:last-child {
@@ -327,13 +376,13 @@ h1, h2, h3, h4, h5, h6 {
 /* footer social  */
 
 .social-icons {
-    margin-left: 120px;
+    margin-left: auto;
 }
 
 .social-icons a {
-    padding-right: 27px;
+    padding-right: 22.3px;
 }
 
 .social-icons a:last-child {
-    padding-right: 0;
+    padding-right: 0px;
 }
